--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 
-This directory is nothing more than a test of Git.
-My name is Max Grosshandler.
+Name: Max Grosshandler 
+Date: 7/29/15
+Batteries: Included
+
